--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		width: 100%;
 		height: 400px;
 		border:1px solid blue;
+		overflow: hidden;
 	}
 	.inner{
 		width: 500%;
@@ -114,11 +115,11 @@
 	 			inner.style.transition="transform .5s";
 	 			inner.style.transform="translateX("+moveX+"px)";
 	 		}
-	 		document.removeEventListener("mousemove",move)
-			document.removeEventListener("mouseup",Up)
+	 		inner.removeEventListener("mousemove",move)
+			inner.removeEventListener("mouseup",Up)
 	 	}
-	 	document.addEventListener(mousemove,move)
-		document.addEventListener(mouseup,Up)
+	 	inner.addEventListener(mousemove,move)
+		inner.addEventListener(mouseup,Up)
 	 })
 	</script>
 </body>
