--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 	 	e.preventDefault();
 	 	var stime=e.timeStamp;  //时间戳
 	 	e=ist?e.changedTouches[0]:e;
+		 alert(1);
 	 	var dx=e.clientX;
 	 	var mx=0;
 	 	var lenx=0;
