--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		var mouseup='mouseup';
 	}
 	 inner.addEventListener(mousedown,function(e){
-		 alert(1);
+//		 alert(1);
 	 	var b=e;
 
 	 	var stime=e.timeStamp;  //时间戳
