--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 	 	}
 	 	inner.addEventListener(mouseup,Up);
 	 	function Up(e){
-//            alert(1);
+            console.log(1);
 	 		var etime=e.timeStamp;
 	 		Lt=etime-stime;
 	 		if(Math.abs(lenx)>ws/2 ||(Lt<100 &&Math.abs(lenx)>30)){  
