--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	.box{
 		width: 100%;
 		height: 400px;
-		border:1px solid blue;
+		/*border:1px solid blue;*/
 		overflow: hidden;
 	}
 	.inner{
@@ -74,7 +74,7 @@
 		var mouseup='mouseup';
 	}
 	 inner.addEventListener(mousedown,function(e){
-         e.preventDefault();
+        e.preventDefault();
 
 	 	var stime=e.timeStamp;  //时间戳
 	 	e=ist?e.changedTouches[0]:e;
@@ -85,7 +85,7 @@
 	 	var forword;
 	 	var Lt;
 	 	inner.style.transition="none";
-	 	inner.addEventListener(mousemove,move);
+	 	document.addEventListener(mousemove,move);
 	 	function move(e){
 	 		e=ist?e.changedTouches[0]:e;
 	 		mx=e.clientX;
@@ -93,7 +93,7 @@
 	 		forword=lenx>0?"right":"left";
 	 		inner.style.webkitTransform="translate3d("+(lenx+moveX)+"px,0,0)";
 	 	}
-	 	inner.addEventListener(mouseup,Up);
+	 	document.addEventListener(mouseup,Up);
 	 	function Up(e){
 	 		var etime=e.timeStamp;
 	 		Lt=etime-stime;
